@@ -224,8 +224,8 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 						filesToCopyToCloud.add(documentDestinationFile.getAbsolutePath());
 					}
 				} catch (IOException e) {
-					classLogger.error("Failed to copy CSV file '" + vectorF.getAbsolutePath()
-							+ "' to vector documents directory '" + documentDir.getAbsolutePath() + "'", e);
+					classLogger.error("Failed to copy CSV file '{}' to vector documents directory '{}'",
+							vectorF.getAbsolutePath(), documentDir.getAbsolutePath(), e);
 					throw new IllegalArgumentException("Unable to remove previously created file for "
 							+ documentDestinationFile.getName() + " or move it to the document directory");
 				}
@@ -243,8 +243,8 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 					// store to move to cloud
 					filesToCopyToCloud.add(indexDestinationFile.getAbsolutePath());
 				} catch (IOException e) {
-					classLogger.error("Failed to copy CSV file '" + vectorF.getAbsolutePath()
-							+ "' to indexed-files directory '" + indexFilesDir.getAbsolutePath() + "'", e);
+					classLogger.error("Failed to copy CSV file '{}' to indexed-files directory '{}'",
+							vectorF.getAbsolutePath(), indexFilesDir.getAbsolutePath(), e);
 					throw new IllegalArgumentException("Unable to remove previously created file for "
 							+ indexDestinationFile.getName() + " or move it to the document directory");
 				}
@@ -303,9 +303,8 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 			filesToCopyToCloud.addAll(vectorCsvFiles);
 			// and the return files (dataset/vector)
 			filesToCopyToCloud.addAll((List<String>) pythonResponseAfterCreatingFiles.get("createdDocuments"));
-			Thread copyFilesToCloudThread = new Thread(new CopyFilesToEngineRunner(engineId, this.getCatalogType(),
+			Thread.ofVirtual().start(new CopyFilesToEngineRunner(engineId, this.getCatalogType(),
 					filesToCopyToCloud.stream().toArray(String[]::new)));
-			copyFilesToCloudThread.start();
 		}
 
 		// verify the index class loaded the dataset
@@ -358,7 +357,7 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 				}
 			}
 		} catch (IOException e) {
-			classLogger.error("Error reading file for line count: {}", file.getName(), e);
+			classLogger.error("Failed to count records in file '{}'", file.getName(), e);
 		}
 		return lines;
 	}
@@ -415,73 +414,65 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 		String indexedFilesPath = this.schemaFolder.getAbsolutePath() + FILE_SEPARATOR + indexClass + FILE_SEPARATOR
 				+ "indexed_files";
 		Path indexDirectory = Paths.get(indexedFilesPath);
-		DirectoryStream<Path> stream = null;
-		try {
-			List<String> sourceNames = new ArrayList<>();
-			for (String document : fileNames) {
-				String documentName = FilenameUtils.getName(document);
-				File f = new File(document);
-				if (f.exists() && f.getName().endsWith(".csv")) {
-					sourceNames.addAll(VectorDatabaseCSVTable.pullSourceColumn(f));
-				} else {
-					sourceNames.add(documentName);
-				}
+		List<String> sourceNames = new ArrayList<>();
+		for (String document : fileNames) {
+			String documentName = FilenameUtils.getName(document);
+			File f = new File(document);
+			if (f.exists() && f.getName().endsWith(".csv")) {
+				sourceNames.addAll(VectorDatabaseCSVTable.pullSourceColumn(f));
+			} else {
+				sourceNames.add(documentName);
 			}
+		}
 
-			for (String document : sourceNames) {
-				String documentName = FilenameUtils.getName(document);
-				String[] fileNamesToDelete = { documentName + "_dataset.pkl", documentName + "_vectors.pkl",
-						documentName + ".csv" };
+		for (String document : sourceNames) {
+			String documentName = FilenameUtils.getName(document);
+			// Include both new safe extensions and the legacy .pkl pair so this method
+			// works against partially-migrated engines as well as freshly-written ones.
+			String[] fileNamesToDelete = { documentName + "_dataset.parquet", documentName + "_vectors.npy",
+					documentName + "_dataset.pkl", documentName + "_vectors.pkl", documentName + ".csv" };
 
-				// Create a filter for the file names
-				DirectoryStream.Filter<Path> fileNameFilters = entry -> {
-					String fileName = entry.getFileName().toString();
-					for (String fileNameToDelete : fileNamesToDelete) {
-						if (fileName.equals(fileNameToDelete)) {
-							return true;
-						}
+			// Create a filter for the file names
+			DirectoryStream.Filter<Path> fileNameFilters = entry -> {
+				String fileName = entry.getFileName().toString();
+				for (String fileNameToDelete : fileNamesToDelete) {
+					if (fileName.equals(fileNameToDelete)) {
+						return true;
 					}
-					return false;
-				};
-
-				try {
-					stream = Files.newDirectoryStream(indexDirectory, fileNameFilters);
-				} catch (IOException e) {
-					classLogger.error("Failed to list indexed files in directory: " + indexDirectory, e);
-					throw new IllegalArgumentException("Unable determine files in " + indexDirectory.getFileName());
 				}
+				return false;
+			};
+
+			try (DirectoryStream<Path> stream = Files.newDirectoryStream(indexDirectory, fileNameFilters)) {
 				for (Path entry : stream) {
 					// Delete each file that matches the specified file name
 					try {
 						Files.delete(entry);
 						filesToRemoveFromCloud.add(entry.toString());
 					} catch (IOException e) {
-						classLogger.error("Failed to delete indexed file: " + entry, e);
+						classLogger.error("Failed to delete indexed file '{}'", entry, e);
 						throw new IllegalArgumentException("Unable to remove file: " + entry.getFileName());
 					}
 					classLogger.info("Deleted: " + entry.toString());
 				}
-				try {
-					File documentFile = new File(this.schemaFolder.getAbsolutePath() + FILE_SEPARATOR + indexClass
-							+ FILE_SEPARATOR + "documents", document);
-					if (documentFile.exists() && documentFile.isFile()) {
-						FileUtils.forceDelete(documentFile);
-						filesToRemoveFromCloud.add(documentFile.getAbsolutePath());
-					}
-				} catch (IOException e) {
-					classLogger.error("Failed to delete document '" + document
-							+ "' from documents directory for index class: " + indexClass, e);
-					throw new IllegalArgumentException("Unable to delete " + document + "from documents directory");
-				}
+			} catch (IllegalArgumentException e) {
+				throw e;
+			} catch (IOException e) {
+				classLogger.error("Failed to list indexed files in directory '{}'", indexDirectory, e);
+				throw new IllegalArgumentException("Unable determine files in " + indexDirectory.getFileName());
 			}
-		} finally {
-			if (stream != null) {
-				try {
-					stream.close();
-				} catch (IOException e) {
-					classLogger.error("Failed to close indexed-files directory stream for index class: " + indexClass,
-							e);
+
+			try {
+				File documentFile = new File(this.schemaFolder.getAbsolutePath() + FILE_SEPARATOR + indexClass
+						+ FILE_SEPARATOR + "documents", document);
+				if (documentFile.exists() && documentFile.isFile()) {
+					FileUtils.forceDelete(documentFile);
+					filesToRemoveFromCloud.add(documentFile.getAbsolutePath());
 				}
+			} catch (IOException e) {
+				classLogger.error("Failed to delete document '{}' from documents directory for index class '{}'",
+						document, indexClass, e);
+				throw new IllegalArgumentException("Unable to delete " + document + "from documents directory");
 			}
 		}
 
@@ -490,27 +481,30 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 		if (indexedFolder.list(new FilenameFilter() {
 			@Override
 			public boolean accept(File dir, String name) {
-				return name.endsWith(".pkl");
+				return name.endsWith(".parquet") || name.endsWith(".npy") || name.endsWith(".pkl");
 			}
 		}).length == 0) {
 			try {
 				File indexClassDirectory = new File(indexedFolder.getParent());
 
-				// remove the master dataset and vector files
+				// remove the master dataset and vector files (include legacy .pkl entries for
+				// engines whose cloud copies have not yet been migrated)
+				filesToRemoveFromCloud.add(new File(indexClassDirectory, "dataset.parquet").getAbsolutePath());
+				filesToRemoveFromCloud.add(new File(indexClassDirectory, "vectors.npy").getAbsolutePath());
 				filesToRemoveFromCloud.add(new File(indexClassDirectory, "dataset.pkl").getAbsolutePath());
 				filesToRemoveFromCloud.add(new File(indexClassDirectory, "vectors.pkl").getAbsolutePath());
 
 				// delete the entire folder
 				FileUtils.forceDelete(indexClassDirectory);
 			} catch (IOException e) {
-				classLogger.error("Failed to delete index class folder for index class: " + indexClass, e);
+				classLogger.error("Failed to delete index class folder for index class '{}'", indexClass, e);
 				throw new IllegalArgumentException("Unable to delete remove the index class folder");
 			}
 			this.pyTranslator
 					.runScript(this.vectorDatabaseSearcher + ".delete_searcher(searcher_name = '" + indexClass + "')");
 			this.indexClasses.remove(indexClass);
 		} else {
-			// Regenerate the master "dataset.pkl" and "vectors.pkl" files
+			// Regenerate the master dataset/vector files
 			StringBuilder updateMasterFilesCommandBuilder = new StringBuilder();
 			updateMasterFilesCommandBuilder.append(this.vectorDatabaseSearcher).append(".searchers['")
 					.append(indexClass).append("']").append(".createMasterFiles(path_to_files = '")
@@ -533,9 +527,8 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 		}
 
 		if (ClusterUtil.IS_CLUSTER) {
-			Thread deleteFilesFromCloudThread = new Thread(new DeleteFilesFromEngineRunner(engineId,
-					this.getCatalogType(), filesToRemoveFromCloud.stream().toArray(String[]::new)));
-			deleteFilesFromCloudThread.start();
+			Thread.ofVirtual().start(new DeleteFilesFromEngineRunner(engineId, this.getCatalogType(),
+					filesToRemoveFromCloud.stream().toArray(String[]::new)));
 		}
 	}
 
@@ -674,9 +667,8 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 				.runDirectPy(executionScript.toString());
 
 		if (ClusterUtil.IS_CLUSTER) {
-			Thread deleteFilesFromCloudThread = new Thread(new DeleteFilesFromEngineRunner(engineId,
-					this.getCatalogType(), corruptedFilesToReason.keySet().stream().toArray(String[]::new)));
-			deleteFilesFromCloudThread.start();
+			Thread.ofVirtual().start(new DeleteFilesFromEngineRunner(engineId, this.getCatalogType(),
+					corruptedFilesToReason.keySet().stream().toArray(String[]::new)));
 		}
 
 		return corruptedFilesToReason;
@@ -740,11 +732,163 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 		return VectorDatabaseTypeEnum.FAISS;
 	}
 
-	////////////////////////////////////////////////////////////////////////
-	////////////////////////////////////////////////////////////////////////
-	////////////////////////////////////////////////////////////////////////
-	////////////////////////////////////////////////////////////////////////
-	////////////////////////////////////////////////////////////////////////
+	/**
+	 * Starts the FAISS python server, ensuring any legacy {@code .pkl} index files
+	 * on disk are migrated to the safe {@code .parquet}/{@code .npy} formats as
+	 * part of startup. Legacy files are detected before Python boots so the
+	 * resulting mapping can be used afterwards to reconcile the cloud copy of the
+	 * engine in cluster mode.
+	 *
+	 * @param port the port the python server should bind to
+	 */
+	@Override
+	protected synchronized void startServer(int port) {
+		// Detect any legacy .pkl files BEFORE Python starts;
+		// FAISSSearcher.__init__ will
+		// auto-migrate them to .parquet/.npy (and delete the .pkl) as part of the init
+		// script.
+		Map<String, String> pendingPickleMigrations = detectLegacyPickleFiles();
+
+		super.startServer(port);
+
+		// In cluster mode the engine folder was just hydrated from cloud and likely
+		// still contains the legacy .pkl entries we just converted locally. Push the
+		// migrated counterparts up and remove the obsolete .pkl from cloud so peers
+		// don't re-pull them.
+		if (!pendingPickleMigrations.isEmpty()) {
+			syncMigratedFilesToCloud(pendingPickleMigrations);
+		}
+	}
+
+	/**
+	 * Walks the schema folder looking for legacy pickle-format FAISS index files
+	 * ({@code *_dataset.pkl}, {@code *_vectors.pkl}, and the master
+	 * {@code dataset.pkl}/ {@code vectors.pkl} pair) under each index class and its
+	 * {@code indexed_files} subdirectory.
+	 *
+	 * @return a map from the absolute path of each legacy {@code .pkl} file to the
+	 *         absolute path of its predicted migrated counterpart
+	 *         ({@code .parquet}/{@code .npy}); empty when no legacy files are
+	 *         present or the schema folder is unavailable
+	 */
+	private Map<String, String> detectLegacyPickleFiles() {
+		Map<String, String> migrations = new HashMap<>();
+		if (this.schemaFolder == null || !this.schemaFolder.isDirectory()) {
+			return migrations;
+		}
+		File[] indexClassDirs = this.schemaFolder.listFiles(File::isDirectory);
+		if (indexClassDirs == null) {
+			return migrations;
+		}
+		for (File indexClassDir : indexClassDirs) {
+			collectLegacyPickleFiles(indexClassDir, migrations);
+			File indexedFiles = new File(indexClassDir, AbstractVectorDatabaseEngine.INDEXED_FOLDER_NAME);
+			if (indexedFiles.isDirectory()) {
+				collectLegacyPickleFiles(indexedFiles, migrations);
+			}
+		}
+		return migrations;
+	}
+
+	/**
+	 * Scans a single directory (non-recursive) for {@code .pkl} files and adds an
+	 * entry to {@code migrations} for each one whose name matches a known legacy
+	 * pattern recognised by {@link #predictMigratedPath(File)}.
+	 *
+	 * @param dir        the directory to scan; may not exist or may not contain any
+	 *                   pickle files, in which case the method returns without
+	 *                   modifying {@code migrations}
+	 * @param migrations accumulator mapping legacy pickle paths to their predicted
+	 *                   safe-format counterparts
+	 */
+	private static void collectLegacyPickleFiles(File dir, Map<String, String> migrations) {
+		File[] pklFiles = dir.listFiles((d, name) -> name.endsWith(".pkl"));
+		if (pklFiles == null) {
+			return;
+		}
+		for (File pkl : pklFiles) {
+			String safePath = predictMigratedPath(pkl);
+			if (safePath != null) {
+				migrations.put(pkl.getAbsolutePath(), safePath);
+			}
+		}
+	}
+
+	/**
+	 * Predicts the on-disk path that a legacy FAISS pickle file will have after the
+	 * Python-side migration completes. Vector pickles ({@code *vectors.pkl}) become
+	 * {@code .npy} and dataset pickles ({@code *dataset.pkl}) become
+	 * {@code .parquet}, matching the conversion logic in {@code FAISSSearcher}.
+	 *
+	 * @param pklFile the legacy pickle file
+	 * @return the absolute path of the migrated counterpart, or {@code null} if the
+	 *         file name does not match a recognised legacy pattern
+	 */
+	private static String predictMigratedPath(File pklFile) {
+		String name = pklFile.getName();
+		String safeName;
+		// Vector pickles -> .npy ; dataset pickles -> .parquet (matches FAISSSearcher
+		// migration)
+		if (name.endsWith("vectors.pkl")) {
+			safeName = name.substring(0, name.length() - ".pkl".length()) + ".npy";
+		} else if (name.endsWith("dataset.pkl")) {
+			safeName = name.substring(0, name.length() - ".pkl".length()) + ".parquet";
+		} else {
+			return null;
+		}
+		return new File(pklFile.getParent(), safeName).getAbsolutePath();
+	}
+
+	/**
+	 * Reconciles the cloud copy of the engine after a local pickle-to-safe-format
+	 * migration: uploads the newly produced {@code .parquet}/{@code .npy} files and
+	 * deletes the obsolete {@code .pkl} entries from cloud storage so peers don't
+	 * re-hydrate them on their next startup. A no-op when not running in cluster
+	 * mode.
+	 *
+	 * <p>
+	 * If Python failed to produce a migrated file the cloud copy is left untouched
+	 * for that entry so a subsequent startup can retry the migration.
+	 *
+	 * @param migrations map from legacy pickle paths to their migrated
+	 *                   counterparts, as produced by
+	 *                   {@link #detectLegacyPickleFiles()}
+	 */
+	private void syncMigratedFilesToCloud(Map<String, String> migrations) {
+		if (!ClusterUtil.IS_CLUSTER || migrations.isEmpty()) {
+			return;
+		}
+		List<String> safePaths = new ArrayList<>();
+		List<String> legacyPathsToDelete = new ArrayList<>();
+		for (Map.Entry<String, String> entry : migrations.entrySet()) {
+			// Only push the migrated counterpart if Python actually produced it, and only
+			// remove the matching .pkl from cloud in that same case. If something went
+			// wrong with the conversion we leave the cloud copy alone so a future startup
+			// can retry the migration.
+			if (new File(entry.getValue()).exists()) {
+				safePaths.add(entry.getValue());
+				legacyPathsToDelete.add(entry.getKey());
+			} else {
+				classLogger.warn(
+						"Expected migrated FAISS index file '{}' missing after Python init; leaving legacy '{}' in cloud so a future startup can retry the migration",
+						entry.getValue(), entry.getKey());
+			}
+		}
+		String[] toUpload = safePaths.toArray(new String[0]);
+		String[] toDelete = legacyPathsToDelete.toArray(new String[0]);
+
+		classLogger.info(
+				"FAISS pickle migration: pushing {} safe-format file(s) to cloud and removing {} legacy .pkl entry/entries for engine '{}'",
+				toUpload.length, toDelete.length, this.engineId);
+
+		if (toUpload.length > 0) {
+			Thread.ofVirtual().start(new CopyFilesToEngineRunner(engineId, this.getCatalogType(), toUpload));
+		}
+		if (toDelete.length > 0) {
+			Thread.ofVirtual().start(new DeleteFilesFromEngineRunner(engineId, this.getCatalogType(), toDelete));
+		}
+	}
+
 	////////////////////////////////////////////////////////////////////////
 
 	/**
@@ -1029,17 +1173,4 @@ public class FaissDatabaseEngine extends AbstractVectorDatabaseEngine {
 		return colName;
 	}
 
-//	public static void main(String[] args) throws Exception {
-//		Properties tempSmss = new Properties();
-//		tempSmss.put("CONNECTION_URL", "Semoss_Dev/vector/");
-//		tempSmss.put("VECTOR_TYPE", "FAISS");
-//		tempSmss.put("INDEX_CLASSES", "default");
-//		tempSmss.put("ENCODER_TYPE", "huggingface");
-//		tempSmss.put("ENCODER_NAME", "sentence-transformers/paraphrase-mpnet-base-v2");
-//		
-//		FaissDatabaseEngine engine = new FaissDatabaseEngine();
-//		engine.open(tempSmss);
-//		
-//		engine.close();
-//	}
 }
