@@ -141,7 +141,6 @@ public class PGVectorDatabaseEngine extends RDBMSNativeEngine implements IVector
 	private PGVectorQueryUtil pgVectorQueryUtil = new PGVectorQueryUtil();
 
 	// maintain details in the log database
-	protected boolean keepInputOutput = false;
 	protected boolean inferenceLogsEnbaled = Utility.isModelInferenceLogsEnabled();
 
 	@Override
@@ -563,7 +562,7 @@ public class PGVectorDatabaseEngine extends RDBMSNativeEngine implements IVector
 			classLogger.error("Failed to insert embedding row into table: " + this.vectorTableName, e);
 			throw e;
 		} finally {
-			ConnectionUtils.closeAllConnectionsIfPooling(this, conn, null, null);
+			ConnectionUtils.closeAllConnectionsIfPooling(this, conn, ps, null);
 		}
 	}
 
@@ -639,11 +638,9 @@ public class PGVectorDatabaseEngine extends RDBMSNativeEngine implements IVector
 		}
 
 		if (ClusterUtil.IS_CLUSTER) {
-			Thread deleteFilesFromCloudThread = new Thread(new DeleteFilesFromEngineRunner(engineId,
-					this.getCatalogType(), filesToRemoveFromCloud.stream().toArray(String[]::new)));
-			deleteFilesFromCloudThread.start();
+			Thread.ofVirtual().start(new DeleteFilesFromEngineRunner(engineId, this.getCatalogType(),
+					filesToRemoveFromCloud.stream().toArray(String[]::new)));
 		}
-
 	}
 
 	@Override
@@ -1010,7 +1007,7 @@ public class PGVectorDatabaseEngine extends RDBMSNativeEngine implements IVector
 				String resolvedString = substitutor.replace(commands[commandIndex]);
 				commands[commandIndex] = resolvedString;
 			}
-			pyTranslator.runEmptyPy(commands);
+			pyTranslator.runEmptyPyNoCancelTrace(commands);
 
 			// for debugging...
 			classLogger.info("Initializing " + SmssUtilities.getUniqueName(this.engineName, this.engineId)
@@ -1214,7 +1211,7 @@ public class PGVectorDatabaseEngine extends RDBMSNativeEngine implements IVector
 								.append(tokenOverlapBetweenChunks).append(", chunking_strategy = ")
 								.append(chunkingStrategy).append(", cfg_tokenizer = cfg_tokenizer)");
 
-						pyTranslator.runScript(splitTextCommand.toString());
+						pyTranslator.runScriptNoCancelTrace(splitTextCommand.toString());
 					}
 
 					extractedFiles.add(extractedFile);
@@ -1247,9 +1244,8 @@ public class PGVectorDatabaseEngine extends RDBMSNativeEngine implements IVector
 
 			if (ClusterUtil.IS_CLUSTER) {
 				// push the actual documents over to the cloud
-				Thread copyFilesToCloudThread = new Thread(new CopyFilesToEngineRunner(this.engineId,
-						this.getCatalogType(), filesToCopyToCloud.stream().toArray(String[]::new)));
-				copyFilesToCloudThread.start();
+				Thread.ofVirtual().start(new CopyFilesToEngineRunner(this.engineId, this.getCatalogType(),
+						filesToCopyToCloud.stream().toArray(String[]::new)));
 			}
 		} catch (Exception e) {
 			classLogger.error("Failed to add documents to PGVector for index class: " + indexClass, e);
